[project]
name = ""
description = ""
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT License" }
authors = [{ name = "Andrew Van", email = "vanandrew@wustl.edu" }]
keywords = []
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
urls = { github = "" }
version = "0.0.1"

# [project.optional-dependencies]
# dev = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# [tool.setuptools]
# zip-safe = true

# [tool.setuptools.packages.find]
# exclude = ["tests"]

[tool.black]
line-length = 120
target-version = ["py37", "py38", "py39", "py310"]

# [tool.pytest.ini_options]
# addopts = "-v --pycodestyle"
# testpaths = [
#     "tests",
# ]

# [tool.coverage.run]
# command_line = "-m pytest"
# source = []

# [tool.coverage.report]
# show_missing = true
# precision = 2

